--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </form>
     </div>
 
-    <script src="js/script_api.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
