--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <label for="aeropuerto">Aeropuerto:</label>
                 <select id="aeropuerto" name="aeropuerto" required>
                     <option value="" disabled selected>Seleccione un aeropuerto</option>
-                    <option value="MAD">MAD - Madrid</option>
-                    <option value="BCN">BCN - Barcelona</option>
-                    <option value="AGP">AGP - Málaga</option>
+                    <option value="MAD - Madrid">MAD - Madrid</option>
+                    <option value="BCN - Barcelona">BCN - Barcelona</option>
+                    <option value="AGP - Málaga">AGP - Málaga</option>
                 </select>
             </div>
             <!-- Campo Fecha -->
@@ -53,7 +53,7 @@
         </form>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/script_api.js"></script>
 </body>
 </html>
 
